[Mac] ResourceRequest's nsURLRequest() does not differentiate null and empty URLs with CFNetwork https://bugs.webkit.org/show_bug.cgi?id=71539

Patch by Benjamin Poulain <bpoulain@apple.com> on 2011-11-04
Reviewed by David Kilzer.

In order to have CFURL and NSURL to be consistent when both are used on Mac,
KURL::createCFURL() is changed to support empty URL values.

* platform/cf/KURLCFNet.cpp:
(WebCore::createCFURLFromBuffer):
(WebCore::KURL::createCFURL):
* platform/mac/KURLMac.mm:
(WebCore::KURL::operator NSURL *):
(WebCore::KURL::createCFURL):

Canonical link: https://commits.webkit.org/87921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99334 268f45cc-cd09-0410-ab3c-d52691b4dbfc